--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "html2pdf.js": "^0.10.3",
     "pdfmake": "^0.2.20",
+    "puppeteer": "^24.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0"
